# TRANSFORMER_ARCH_BASECALLER

CPP/: CMakeLists.txt  ConvWindow.py  RoPE.hpp  RoPE_test.py  convinputbuffer.cpp  hls_components.cpp  main.cpp  temp.cpp  transformer_block.cpp
CPP1/: latest_attn_hls.cpp
CPP1/builder/: CMakeLists.txt  MatrixInnerEngine.hpp  WindowedAttention.cpp  constructor.cpp  mac.hpp  stream.hpp  temp.py  tester.py  weight_format.hpp
